# nanaban

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/analysis/: tooling-landscape.md
docs/plans/: v0.1-feature-plan.md
skill/: SKILL.md
src/: cli.rs  client.rs  config.rs  main.rs  models.rs  output.rs
